brat/test/golden/error/type-arith2.brat.golden
Error in test/golden/error/type-arith2.brat on line 1:
f(n :: #, Vec(Nat, n * n)) -> Bool
                   ^^^^^

  Type error: Type level arithmetic too confusing

